# benchmark-prac-haskell

./: .gitignore  .travis.yml  README.md  benchmark-prac-haskell.cabal
bench/: BenchMain.hs
